add required fields for scorecard testS

--- a/packagemanifests/managed-api-service/1.14.0/managed-api-service.clusterserviceversion.yaml
+++ b/packagemanifests/managed-api-service/1.14.0/managed-api-service.clusterserviceversion.yaml
@@ -71,11 +71,79 @@ spec:
         version: v1alpha1
         description: RHOAMConfig is the Schema for the rhoamconfigs API
         displayName: RHOAMConfig
+        resources:
+          - kind: ConfigMap
+            name: 'rhoam-config'
+            version: v1
+        statusDescriptors:
+          - description: The status of each of the RHMI Config CR
+            displayName: RHMI Config CR Status
+            path: status
       - kind: RHMI
         name: rhmis.integreatly.org
         version: v1alpha1
         description: RHOAM is the Schema for the RHOAM API
         displayName: RHOAM installation
+        resources:
+          - kind: Deployment
+            name: 'rhoam-operator'
+            version: v1
+          - kind: Pod
+            name: 'rhoam'
+            version: v1
+        specDescriptors:
+          - description: namespacePrefix
+            displayName: namespacePrefix
+            path: namespacePrefix
+          - description: operatorsInProductNamespace
+            displayName: operatorsInProductNamespace
+            path: operatorsInProductNamespace
+          - description: pagerDutySecret
+            displayName: pagerDutySecret
+            path: pagerDutySecret
+          - description: selfSignedCerts
+            displayName: selfSignedCerts
+            path: selfSignedCerts
+          - description: deadMansSnitchSecret
+            displayName: deadMansSnitchSecret
+            path: deadMansSnitchSecret
+          - description: type
+            displayName: type
+            path: type
+          - description: useClusterStorage
+            displayName: useClusterStorage
+            path: useClusterStorage
+          - description: priorityClassName
+            displayName: priorityClassName
+            path: priorityClassName
+          - description: smtpSecret
+            displayName: smtpSecret
+            path: smtpSecret
+          - description: pagerDutySecret
+            displayName: pagerDutySecret
+            path: pagerDutySecret
+          - description: priorityClassName
+            displayName: priorityClassName
+            path: priorityClassName
+          - description: selfSignedCerts
+            displayName: selfSignedCerts
+            path: selfSignedCerts
+          - description: smtpSecret
+            displayName: smtpSecret
+            path: smtpSecret
+          - description: type
+            displayName: type
+            path: type
+          - description: useClusterStorage
+            displayName: useClusterStorage
+            path: useClusterStorage
+          - description: deadMansSnitchSecret
+            displayName: deadMansSnitchSecret
+            path: deadMansSnitchSecret
+        statusDescriptors:
+          - description: The status of each of the RHMI CR
+            displayName: RHMI CR Status
+            path: status
   description: RHOAM integration suite of tools
   displayName: RHOAM
   icon:
