--- a/products/additional-images.yaml
+++ b/products/additional-images.yaml
@@ -5,7 +5,7 @@ additionalImages:
   - name: 3scale-openshift-servce-mesh
     url: "registry.redhat.io/openshift-service-mesh/proxyv2-rhel8:2.1.0-1"
   - name: marin3r-limitador
-    url: "quay.io/3scale/limitador:0.5.0"
+    url: "quay.io/3scale/limitador:v0.5.1"
   - name: observability-grafana-plugins-init
     url: "quay.io/integreatly/grafana_plugins_init:0.0.3"
   - name: observability-origin-oauth-proxy
