--- a/products/installation.yaml
+++ b/products/installation.yaml
@@ -57,9 +57,10 @@
 #
 products:
   3scale:
-    channel: "rhmi"
-    installFrom: "local"
-    manifestsDir: "integreatly-3scale"
+    channel: "threescale-2.11"
+    installFrom: "index"
+    package: "3scale-operator"
+    index: "quay.io/integreatly/3scale-index:v0.8.3-0.1649688682"
   amqonline:
     channel: "rhmi"
     installFrom: "local"
