--- a/bundles/managed-api-service/1.22.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.22.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -155,6 +155,17 @@ spec:
       clusterPermissions:
         - rules:
             - apiGroups:
+                - autoscaling
+              resources:
+                - horizontalpodautoscalers
+              verbs:
+                - create
+                - delete
+                - get
+                - list
+                - update
+                - watch
+            - apiGroups:
                 - ""
               resources:
                 - configmaps
