--- a/products/installation.yaml
+++ b/products/installation.yaml
@@ -60,7 +60,7 @@ products:
     channel: "threescale-2.11"
     installFrom: "index"
     package: "3scale-operator"
-    index: "quay.io/integreatly/3scale-index:v0.8.3-0.1649688682"
+    index: "quay.io/integreatly/3scale-index:v0.8.4"
   amqonline:
     channel: "rhmi"
     installFrom: "local"
